# sudoku-solver

./: .replit  README.md  app.py  app_new.py  app_old.py  backend.py  controller.py  file_handler.py  flake.nix  model.py  package-lock.json  package.json  plugin_manager.py  pnpm-lock.yaml  pyproject.toml  replit.md  shell.nix  sudoku_core.py  view.py
.streamlit/: config.toml
frontend/: README.md  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: SidebarControls.vue  SolverControls.vue  SudokuGrid.vue
frontend/src/stores/: sudoku.ts
frontend/src/views/: HomeView.vue
plugins/: __init__.py  sample_solver.py
solvers/: backtracking_solver.py  brute_force_solver.py
