[tool.poetry]
name = "sudoku-solver"
version = "0.1.0"
description = "Interactive Sudoku solver with plugin system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sudoku_solver", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
python-json-logger = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
]